Product endpoint & DB connection
